# pytemplate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: example.ipynb
src/mypackage/: __init__.py  main.py
tests/: test_helloworld.py
